--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
-title: no style, please! # name of the site
+title: Log me # name of the site
 author: Riccardo Graziosi # name of site's author
 email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
+url: https://tiblonde.github.io/ # root address of the site
 baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
-  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+  To set up individual site, I blindly skim some front-end tech but archieved little. 
+  Finally I just fork "minimalist Jekyll theme" as my reposity.
+  Low-efficiency.
 
 permalink: /:slug.html
 
@@ -17,7 +19,7 @@ theme_config:
   appearance: "auto" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
-  show_description: false # show blog description in home page
+  show_description: true # show blog description in home page
 
 sass:
   style: :compressed
