--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,8 +9,9 @@ entries:
         url: https://github.com/riggraz/no-style-please
       - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
 
-  - title: all posts
+  - title: footprint front-end
     post_list:
+      category: front-end
       limit: 5
       show_more: true
       show_more_text: See archive...
@@ -19,6 +20,7 @@ entries:
   - title: posts by category
     post_list:
       category: example2
+      limit: 1
       show_more: true
       show_more_text: See more posts...
       show_more_url: example2-archive.html
