--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Log me # name of the site
 author: Riccardo Graziosi # name of site's author
 email: riccardo.graziosi97@gmail.com # email of site's author
 url: https://github.com/Tiblonde/Tiblonde.github.io # root address of the site
-baseurl: "/_posts" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   To set up individual site, I blindly skimmed some front-end tech but achieved little. 
   Finally I just fork "minimalist Jekyll theme" as my repository.
