--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,17 +13,13 @@ entries:
     post_list:
       category: front-end
       limit: 5
-      show_more: true
-      show_more_text: See archive...
-      show_more_url: archive.html
 
-  - title: posts by category
+  - title: All posts
     post_list:
-      category: example2
-      limit: 1
+      limit: 5
       show_more: true
       show_more_text: See more posts...
-      show_more_url: example2-archive.html
+      show_more_url: archive.html
 
   - title: rss
     url: feed.xml
